fixing follow alignament

--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/onboarding/follow.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/onboarding/follow.less
@@ -45,6 +45,7 @@
         border-bottom: 1px solid @lightGrayColor;
         margin-top: -1px;
         position: relative;
+        width: 100px;
 
         input[type="checkbox"] {
           position: absolute;
